--- a/about excelsior.html
+++ b/about excelsior.html
@@ -11,11 +11,11 @@
 <body>
 <center><table width="1200">
 
-  <td> <a href="file:///D:/vincent lacertosa/index.html"> <p class="nav text"> Home</a> </td>
-  <td> <a href="file:///D:/vincent lacertosa/project.html"> <p class="nav text">Projects</a> </td>
-  <td> <a href="file:///D:/vincent lacertosa/contact me.html"> <p class="nav text"> Contact Me </a> </td>
-<td> <a href="file:///D:/vincent lacertosa/about excelsior.html"> <p class="nav text"> About Excelsior </a> </td>
-<td> <a href="file:///D:/vincent lacertosa/resume.html"> <p class="nav text"> Resume </a> </td>
+  <td> <a href="index.html"> <p class="nav text"> Home</a> </td>
+  <td> <a href="project.html"> <p class="nav text">Projects</a> </td>
+  <td> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </td>
+<td> <a href="about excelsior.html"> <p class="nav text"> About Excelsior </a> </td>
+<td> <a href="resume.html"> <p class="nav text"> Resume </a> </td>
 
 
   </tr>
