--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
 </center>
 </head>
 <body>
-<center><table width="1200">
+<center>
 
   <td> <a href="index.html"> <p class="nav text"> Home</a> </td>
   <td> <a href="project.html"> <p class="nav text">Projects</a> </td>
@@ -18,7 +18,7 @@
 
 
   </tr>
-</table></center>
+</center>
 <center><img src="http://blog.flamingtext.com/blog/2015/10/09/flamingtext_com_1444403618_675881391.png" border="0" alt="Logo Design by FlamingText.com" title="Logo Design by FlamingText.com"></a>
 <br/></a>
 </center>
