--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 <title> Vincent Lacertosa Digital Portfolio </title>
 <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
 <center><img src="http://blog.flamingtext.com/blog/2015/10/06/flamingtext_com_1444144234_675880764.png" border="0" alt="Logo Design by FlamingText.com" title="Logo Design by FlamingText.com"></a>
@@ -19,10 +20,8 @@
 
   </tr>
 </center>
-<center><img src="http://blog.flamingtext.com/blog/2015/10/09/flamingtext_com_1444401294_675881373.png" border="0" alt="Logo Design by FlamingText.com" title="Logo Design by FlamingText.com"></a>
-<br/></a></center>
-<h1> I am Vincent Lacertosa. I was born August 31, 2000. In Burlington, Vermont.I lived there for a couple of months then moved to Staten Island.
- In Staten island i lived with my sister, mom, and dad. I now live in Newburgh, New York.
-This year I am a 10th grade with 3 college courses on my schedule.
-</body>
+<center><img src="http://blog.flamingtext.com/blog/2015/10/09/flamingtext_com_1444403485_675881390.png" border="0" alt="Logo Design by FlamingText.com" title="Logo Design by FlamingText.com"></a>
+<br/></a>
+</center>
+
 </html>
