--- a/contact me.html
+++ b/contact me.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 <title> Vincent Lacertosa Digital Portfolio </title>
 <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
 <center><img src="http://blog.flamingtext.com/blog/2015/10/06/flamingtext_com_1444144234_675880764.png" border="0" alt="Logo Design by FlamingText.com" title="Logo Design by FlamingText.com"></a>
@@ -19,10 +20,8 @@
 
   </tr>
 </center>
-<center><img src="http://blog.flamingtext.com/blog/2015/10/09/flamingtext_com_1444403338_675881386.png" border="0" alt="Logo Design by FlamingText.com" title="Logo Design by FlamingText.com"></a>
+<center><img src="http://blog.flamingtext.com/blog/2015/10/09/flamingtext_com_1444403485_675881390.png" border="0" alt="Logo Design by FlamingText.com" title="Logo Design by FlamingText.com"></a>
 <br/></a>
+</center>
 
-<br/></a></center>
-
-</body>
 </html>
