--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title> Vincent Lacertosa Digital Portfolio </title>
 <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
 
-<h1> Vincent Lacertosa </h1>
+<center><h1> Vincent Lacertosa </h1></center>
 
 </head>
 <body>
