--- a/about excelsior.html
+++ b/about excelsior.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href='https://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 <title> Vincent Lacertosa Digital Portfolio </title>
 <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
