--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <h1> About Me </h1>
 </center>
 
-<p> hello </p>
+<p> My name is Vincent Lacertosa. I am in the tenth grade with 2 college courses in my schdule. I am a excelsior student in Newbrugh New York.
+I am generally a B+ to A student.  </p>
 
 
 </body>
