--- a/about excelsior.html
+++ b/about excelsior.html
@@ -20,9 +20,15 @@
 
 
   </tr>
+<h1> About Excelsior </h1>
 </center>
+<p> Excelsior program is a house in Newburgh Free Academy. In this house they prepare you for college courses as soon as possible. You can
+  graduate with your high school diploma and a applied associated degree in computer science within 4 to 6 year depending on how hard you work. In the Newburgh Excelsior we are partnered with
+   IBM. When we graduate we have a guaranteed interview, not a guaranteed job. When you join Excelsior you are given a mentor. This mentor
+   will be with you throughout your entire time in Excelsior. You may get a different mentor if your mentor either quits, gets fired, or moves.
+  In your third year you are able to get a paid internship. Depending on how you work on your internship they may hire you after you
+graduate. </p>
 
 
-</center>
 
 </html>
