--- a/project.html
+++ b/project.html
@@ -22,7 +22,15 @@
   </tr>
 </center>
 <br> </br>
+<h1> Projects </h1>
 
+
+<p> Throughout Excelsior we had to do many projects. Here are a few projects that we did.
+  We did the egg drop, were we had to drop an egg from the ceiling. But the catch was we only had to get our desgn under
+  a certin buget. Next projects that we have done were a public speaking project, we had to write about a topic than had to present it in front
+  of our peers. One last project that we have done was that we had to build a rocket out of soda bottles, clay, paper or cardboard, and tape.
+</body>
+</html>
 
 </body>
 </html>
