--- a/project.html
+++ b/project.html
@@ -21,10 +21,10 @@
 
   </tr>
 </center>
+
+<center><h1> Projects </h1></center>
+
 <br> </br>
-<h1> Projects </h1>
-
-
 <p> Throughout Excelsior we had to do many projects. Here are a few projects that we did.
   We did the egg drop, were we had to drop an egg from the ceiling. But the catch was we only had to get our desgn under
   a certin buget. Next projects that we have done were a public speaking project, we had to write about a topic than had to present it in front
