--- a/contact me.html
+++ b/contact me.html
@@ -21,8 +21,7 @@
 
   </tr>
 </center>
+<img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwiLr8-als_JAhVMez4KHfd9DVMQjRwIBw&url=https%3A%2F%2Fplay.google.com%2Fstore%2Fapps%2Fdetails%3Fid%3Dcom.google.android.gm&psig=AFQjCNHPi_lMrx9foCUAarvXO3fuE_VIIQ&ust=1449764081981372">
 
-
-</center>
-
+</body>
 </html>
