--- a/contact me.html
+++ b/contact me.html
@@ -21,7 +21,7 @@
 
   </tr>
 </center>
-<img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwiLr8-als_JAhVMez4KHfd9DVMQjRwIBw&url=https%3A%2F%2Fplay.google.com%2Fstore%2Fapps%2Fdetails%3Fid%3Dcom.google.android.gm&psig=AFQjCNHPi_lMrx9foCUAarvXO3fuE_VIIQ&ust=1449764081981372">
+<img src="https://lh6.ggpht.com/8-N_qLXgV-eNDQINqTR-Pzu5Y8DuH0Xjz53zoWq_IcBNpcxDL_gK4uS_MvXH00yN6nd4=w300">
 
 </body>
 </html>
