--- a/contact me.html
+++ b/contact me.html
@@ -22,6 +22,6 @@
   </tr>
 </center>
 <img src="https://lh6.ggpht.com/8-N_qLXgV-eNDQINqTR-Pzu5Y8DuH0Xjz53zoWq_IcBNpcxDL_gK4uS_MvXH00yN6nd4=w300">
-
+<p> vlacertosa.ptech@gmail.com </p>
 </body>
 </html>
