--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <center>
-
+<h1><center> Vincent Lacertosa </center> </h1>
   <td> <a href="index.html"> <p class="nav text"> Home</a> </td>
   <td> <a href="project.html"> <p class="nav text">Projects</a> </td>
   <td> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </td>
