--- a/contact me.html
+++ b/contact me.html
@@ -11,15 +11,15 @@
 </head>
 <body>
 <center>
-
+  <h1> <center> Vincent Lacertosa </center> </h1>
   <td> <a href="index.html"> <p class="nav text"> Home</a> </td>
   <td> <a href="project.html"> <p class="nav text">Projects</a> </td>
   <td> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </td>
 <td> <a href="about excelsior.html"> <p class="nav text"> About Excelsior </a> </td>
 <td> <a href="resume.html"> <p class="nav text"> Resume </a> </td>
 
-
-  </tr>
+</tr>
+<h1> Contact Me </h1>
 </center>
 <img src="https://lh6.ggpht.com/8-N_qLXgV-eNDQINqTR-Pzu5Y8DuH0Xjz53zoWq_IcBNpcxDL_gK4uS_MvXH00yN6nd4=w300">
 <p> vlacertosa.ptech@gmail.com </p>
