--- a/resume.html
+++ b/resume.html
@@ -11,18 +11,18 @@
 </head>
 <body>
 <center>
-
+<h1> Vincent Lacertosa </h1>
   <td> <a href="index.html"> <p class="nav text"> Home</a> </td>
   <td> <a href="project.html"> <p class="nav text">Projects</a> </td>
   <td> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </td>
 <td> <a href="about excelsior.html"> <p class="nav text"> About Excelsior </a> </td>
 <td> <a href="resume.html"> <p class="nav text"> Resume </a> </td>
 
-
-  </tr>
+</tr>
+<h1> Resume </h1>
 </center>
 
 
-</center>
+
 
 </html>
