--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>  
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 <title> Vincent Lacertosa Digital Portfolio </title>
@@ -12,15 +12,15 @@
 </head>
 <body>
 <center>
+<ul class="navbar">
+   <li><a href="index.html"> <p class="nav text"> Home</a> </li>
+  <li> <a href="project.html"> <p class="nav text">Projects</a> </li>
+  <li> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </li>
+<li> <a href="about excelsior.html"> <p class="nav text"> About Excelsior </a> </li>
+<li> <a href="resume.html"> <p class="nav text"> Resume </a> </li>
+</ul>
 
-  <td> <a href="index.html"> <p class="nav text"> Home</a> </td>
-  <td> <a href="project.html"> <p class="nav text">Projects</a> </td>
-  <td> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </td>
-<td> <a href="about excelsior.html"> <p class="nav text"> About Excelsior </a> </td>
-<td> <a href="resume.html"> <p class="nav text"> Resume </a> </td>
 
-
-  </tr>
 <h1> About Me </h1>
 </center>
 
