--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <center>
 <ul class="navbar">
    <li><a href="index.html"> <p class="nav text"> Home</a> </li>
-  <li> <a href="project.html"> <p class="nav text">Projects</a> </li>
+  <li class="dropdown"> <a class="drop-toggle" href"#">" <p class="nav text">Projects</a> </li>
+<ul class="dropdown-menu-toggle">
+  <li> <a href="project.html"> project </a> </li>
   <li> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </li>
 <li> <a href="about excelsior.html"> <p class="nav text"> About Excelsior </a> </li>
 <li> <a href="resume.html"> <p class="nav text"> Resume </a> </li>
