--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 <p> My name is Vincent Lacertosa. I am in the tenth grade with 2 college courses in my schedule. I am a excelsior student in Newbrugh New York.
 I am generally a B+ to A student. </p>
 
-
+<script src="app.js"></script>
 </body>
 </html>
