--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
 <body>
 <center>
 <ul class="navbar">
-   <li><a href="index.html"> <p class="nav text"> Home</a> </li>
-  <li class="dropdown"> <a class="drop-toggle" href"#">" <p class="nav text">Projects</a> </li>
-<ul class="dropdown-menu-toggle">
-  <li> <a href="project.html"> project  1</a> </li>
-  <li> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </li>
-<li> <a href="about excelsior.html"> <p class="nav text"> About Excelsior </a> </li>
-<li> <a href="resume.html"> <p class="nav text"> Resume </a> </li>
+    <li><a href="index.html"> <p class="nav text"> Home</a> </li>
+
+    <li class="dropdown"> <a class="dropdown-toggle" href"#"> <p class="nav text">Projects</p></a>
+      <ul class="dropdown-menu">
+          <li> <a href="project.html"> project  1</a> </li>
+          <li><a href="#">Project2</a></li>
+          <li><a href="#">Project3</a></li>
+      </ul>
+    </li>
+
+    <li> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </li>
+    <li> <a href="about excelsior.html"> <p class="nav text"> About Excelsior </a> </li>
+    <li> <a href="resume.html"> <p class="nav text"> Resume </a> </li>
 </ul>
 
 
