--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <ul class="navbar">
     <li><a href="index.html"> <p class="nav text"> Home</a> </li>
 
-    <li class="dropdown"> <a class="dropdown-toggle" href"#"> <p class="nav text">Projects</p></a>
+    <li class="dropdown"> <a class="dropdown-toggle" href"#"> <color:green> <font-size: 150%>Projects</p></a>
       <ul class="dropdown-menu">
           <li> <a href="project.html"> project  1</a> </li>
           <li><a href="#">Project2</a></li>
