--- a/about excelsior.html
+++ b/about excelsior.html
@@ -13,17 +13,40 @@
 <body>
 <center>
 
-  <td> <a href="index.html"> <p class="nav text"> Home</a> </td>
-  <td> <a href="project.html"> <p class="nav text">Projects</a> </td>
-  <td> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </td>
-<td> <a href="about excelsior.html"> <p class="nav text"> About Excelsior </a> </td>
-<td> <a href="resume.html"> <p class="nav text"> Resume </a> </td>
+  <ul class="navbar">
+      <li><a href="index.html"> <p class="nav text"> Home</a> </li>
 
+      <li class="dropdown"> <a class="dropdown-toggle" href"#"> <color:green> <font-size: 150%>Projects</p></a>
+        <ul class="dropdown-menu">
+            <li> <a href="project.html"> project  1</a> </li>
+            <li><a href="#">Project2</a></li>
+            <li><a href="#">Project3</a></li>
+        </ul>
+      </li>
 
-  </tr>
+      <li> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </li>
+      <li> <a href="about excelsior.html"> <p class="nav text"> About Excelsior </a> </li>
+      <li> <a href="resume.html"> <p class="nav text"> Resume </a> </li>
+  </ul>
 <h1> About Excelsior </h1>
 </center>
 <br> </br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
 <p> Excelsior program is a house in Newburgh Free Academy. In this house they prepare you for college courses as soon as possible. You can
   graduate with your high school diploma and a applied associated degree in computer science within 4 to 6 year depending on how hard you work. In the Newburgh Excelsior we are partnered with
    IBM. When we graduate we have a guaranteed interview, not a guaranteed job. When you join Excelsior you are given a mentor. This mentor
