--- a/contact me.html
+++ b/contact me.html
@@ -12,16 +12,39 @@
 </head>
 <body>
 <center>
-  <h1> <center> Vincent Lacertosa </center> </h1>
-  <td> <a href="index.html"> <p class="nav text"> Home</a> </td>
-  <td> <a href="project.html"> <p class="nav text">Projects</a> </td>
-  <td> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </td>
-<td> <a href="about excelsior.html"> <p class="nav text"> About Excelsior </a> </td>
-<td> <a href="resume.html"> <p class="nav text"> Resume </a> </td>
+  <<ul class="navbar">
+      <li><a href="index.html"> <p class="nav text"> Home</a> </li>
 
-</tr>
+      <li class="dropdown"> <a class="dropdown-toggle" href"#"> <color:green> <font-size: 150%>Projects</p></a>
+        <ul class="dropdown-menu">
+            <li> <a href="project.html"> project  1</a> </li>
+            <li><a href="#">Project2</a></li>
+            <li><a href="#">Project3</a></li>
+        </ul>
+      </li>
+
+      <li> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </li>
+      <li> <a href="about excelsior.html"> <p class="nav text"> About Excelsior </a> </li>
+      <li> <a href="resume.html"> <p class="nav text"> Resume </a> </li>
+  </ul>
 <h1> Contact Me </h1>
 </center>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
 <img src="https://lh6.ggpht.com/8-N_qLXgV-eNDQINqTR-Pzu5Y8DuH0Xjz53zoWq_IcBNpcxDL_gK4uS_MvXH00yN6nd4=w300">
 <p> vlacertosa.ptech@gmail.com </p>
 </body>
