--- a/project.html
+++ b/project.html
@@ -12,15 +12,22 @@
 </head>
 <body>
 <center>
-<h1><center> Vincent Lacertosa </center> </h1>
-  <td> <a href="index.html"> <p class="nav text"> Home</a> </td>
-  <td> <a href="project.html"> <p class="nav text">Projects</a> </td>
-  <td> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </td>
-<td> <a href="about excelsior.html"> <p class="nav text"> About Excelsior </a> </td>
-<td> <a href="resume.html"> <p class="nav text"> Resume </a> </td>
+  <ul class="navbar">
+      <li><a href="index.html"> <p class="nav text"> Home</a> </li>
 
+      <li class="dropdown"> <a class="dropdown-toggle" href"#"> <color:green> <font-size: 150%>Projects</p></a>
+        <ul class="dropdown-menu">
+            <li> <a href="project.html"> project  1</a> </li>
+            <li><a href="#">Project2</a></li>
+            <li><a href="#">Project3</a></li>
+        </ul>
+      </li>
 
-  </tr>
+      <li> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </li>
+      <li> <a href="about excelsior.html"> <p class="nav text"> About Excelsior </a> </li>
+      <li> <a href="resume.html"> <p class="nav text"> Resume </a> </li>
+  </ul>
+
 </center>
 
 <center><h1> Projects </h1></center>
