--- a/contact me.html
+++ b/contact me.html
@@ -6,13 +6,14 @@
 <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 <title> Vincent Lacertosa Digital Portfolio </title>
 <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
-
+<center> <h1> Vincent Lacertosa </h1> </center>
 
 
 </head>
 <body>
 <center>
-  <<ul class="navbar">
+
+  <ul class="navbar">
       <li><a href="index.html"> <p class="nav text"> Home</a> </li>
 
       <li class="dropdown"> <a class="dropdown-toggle" href"#"> <color:green> <font-size: 150%>Projects</p></a>
