--- a/about excelsior.html
+++ b/about excelsior.html
@@ -6,7 +6,7 @@
 <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 <title> Vincent Lacertosa Digital Portfolio </title>
 <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
-<center> <h1> About Excelsior </h1> </center>
+<center> <h1> Vincent Lacertosa </h1> </center>
 
 
 </head>
