--- a/about excelsior.html
+++ b/about excelsior.html
@@ -53,6 +53,8 @@
    will be with you throughout your entire time in Excelsior. You may get a different mentor if your mentor either quits, gets fired, or moves.
   In your third year you are able to get a paid internship. Depending on how you work on your internship they may hire you after you
 graduate. </p>
+<script src="app.js"></script>
+</body>
 
 
 
