--- a/contact me.html
+++ b/contact me.html
@@ -48,5 +48,6 @@
 <br></br>
 <img src="https://lh6.ggpht.com/8-N_qLXgV-eNDQINqTR-Pzu5Y8DuH0Xjz53zoWq_IcBNpcxDL_gK4uS_MvXH00yN6nd4=w300">
 <p> vlacertosa.ptech@gmail.com </p>
+<script src="app.js"></script>
 </body>
 </html>
