--- a/project.html
+++ b/project.html
@@ -38,7 +38,7 @@
   a certin buget. Next projects that we have done were a public speaking project, we had to write about a topic than had to present it in front
   of our peers. One last project that we have done was that we had to build a rocket out of soda bottles, clay, paper or cardboard, and tape.
 </body>
-</html>
 
+<script src="app.js"></script>
 </body>
 </html>
