--- a/about excelsior.html
+++ b/about excelsior.html
@@ -14,9 +14,9 @@
 <center>
 
   <ul class="navbar">
-      <li><a href="index.html"> <p class="nav text"> Home</a> </li>
+      <li><a href="index.html"> Home</a> </li>
 
-      <li class="dropdown"> <a class="dropdown-toggle" href"#"> <color:green> <font-size: 150%>Projects</p></a>
+      <li class="dropdown"> <a class="dropdown-toggle" href="#">Projects</a>
         <ul class="dropdown-menu">
             <li> <a href="project.html"> project  1</a> </li>
             <li><a href="#">Project2</a></li>
@@ -24,9 +24,10 @@
         </ul>
       </li>
 
-      <li> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </li>
-      <li> <a href="about excelsior.html"> <p class="nav text"> About Excelsior </a> </li>
-      <li> <a href="resume.html"> <p class="nav text"> Resume </a> </li>
+
+      <li> <a href="contact me.html"> Contact Me </a> </li>
+      <li> <a href="about excelsior.html"> About Excelsior </a> </li>
+      <li> <a href="resume.html"> Resume </a> </li>
   </ul>
 <h1> About Excelsior </h1>
 </center>
