--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 
 </head>
 <body>
-<center>
 <ul class="navbar">
-    <li><a href="index.html"> <p class="nav text"> Home</a> </li>
+    <li><a href="index.html"> Home</a> </li>
 
-    <li class="dropdown"> <a class="dropdown-toggle" href"#"> <color:green> <font-size: 150%>Projects</p></a>
+    <li class="dropdown"> <a class="dropdown-toggle" href="#">Projects</a>
       <ul class="dropdown-menu">
           <li> <a href="project.html"> project  1</a> </li>
           <li><a href="#">Project2</a></li>
@@ -23,14 +22,15 @@
       </ul>
     </li>
 
-    <li> <a href="contact me.html"> <p class="nav text"> Contact Me </a> </li>
-    <li> <a href="about excelsior.html"> <p class="nav text"> About Excelsior </a> </li>
-    <li> <a href="resume.html"> <p class="nav text"> Resume </a> </li>
+
+    <li> <a href="contact me.html"> Contact Me </a> </li>
+    <li> <a href="about excelsior.html"> About Excelsior </a> </li>
+    <li> <a href="resume.html"> Resume </a> </li>
 </ul>
 
+<br></br>
+<center> <h1> About Me </h1></center>
 
-<h1> About Me </h1>
-</center>
 <br></br>
 <br></br>
 <br></br>
