--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <li class="dropdown"> <a class="dropdown-toggle" href="#">Projects</a>
       <ul class="dropdown-menu">
-          <li> <a href="project.html"> project  1</a> </li>
-          <li><a href="#">Project2</a></li>
-          <li><a href="#">Project3</a></li>
+          <li> <a href="Lacertosa_studentchoiceargument.docx" download> English</a> </li>
+          <li><a href="PublicspeechLacertosa.docx" download>Public Speech</a></li>
+          <li><a href="ballbouncelab.docx" download>Physics</a></li>
       </ul>
     </li>
 
